# jlox

./: .gitignore  pom.xml
challenges/05-representing-code-02-visitor-haskell/: Expr.hs  Expr2.hs  Main.hs
clox/: .gitignore  CMakeLists.txt  Doxyfile  build.sh  clean.sh  clox.c  commons.c  commons.h  expr.h  hello-hash.c  main.c  scanner.c  scanner.h  strview.c  strview.h  test-ast-printer.c  test-ast-rpn-printer.c  token.c  token.h
clox/clox/: ast-printer.c  ast-printer.h  ast-printer.unit.c  ast-rpn-printer.c  commons.h  expr.c  expr.h  interpreter.c  interpreter.h  parser.c  parser.h  scanner.c  scanner.h  str.c  str.h  token.c  token.h  tree-traversal-order.h  value.c  value.h
clox/clox-cli/: ansi.h  main.c
clox/clox-vm/src/clox/vm/: chunk.c  chunk.h  common.h  dbg.c  dbg.h  main.c  mem.c  mem.h  value.c  value.h
clox/clox/src/clox/: ast-printer.c  ast-rpn-printer.unit.c  commons.c  commons.h  env.c  env.h  expr.c  interpreter-expr-visitor-eval.c  interpreter-expr-visitor-eval.h  interpreter-statement-visitor-exec.c  interpreter-statement-visitor-exec.h  interpreter.c  interpreter.h  parser.c  parser.h  scanner.c  scanner.h  str.c  str.h  strview.c  strview.h  token.c  value.c  value.h
clox/clox/src/clox/ast/: ast-printer.c  ast-printer.h  ast-printer.unit.c  ast-rpn-printer.c  ast-rpn-printer.h  ast-rpn-printer.unit.c  expr-visitor-free.c  expr-visitor-free.h  expr-visitor.c  expr-visitor.h  expr.c  expr.h  program.c  program.h  statement-visitor.c  statement-visitor.h  statement.c  statement.h
clox/fixtures/: bad-string.lox  expr.lox  hello-world.lox
jlox/src/main/java/br/com/hbobenicio/jlox/: AstPrinter.java  Expr.java  JLox.java  Lox.java  Scanner.java  Token.java  TokenType.java
src/main/java/br/com/hbobenicio/: Main.java
src/main/java/br/com/hbobenicio/jlox/: Lox.java  Scanner.java
